Image src changed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="title" class="title">Ratan Naval Tata</h1>
         <figure>
         <div id="img-div" class="img-div">
-          <img src="MiniProject1/Ratan Tata Head.png" alt="Ratan Tata" id="image" class="image">
+          <img src="Ratan Tata Head.png" alt="Ratan Tata" id="image" class="image">
            <figcaption id="img-caption" class="img-caption">
             Ratan Tata - A Businessman, Philanthropist, Investor, and former chairman of Tata Sons, Tata Group.
            </figcaption>
